--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -182,22 +182,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Mexico'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "mexico = countries[3]\n",
+    "mexico = countries\n",
     "mexico"
    ]
   },
