Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -443,7 +443,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = set(countres)"
+    "unique_countries = countries.set()"
    ]
   },
   {
