--- a/index.ipynb
+++ b/index.ipynb
@@ -448,9 +448,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['South Korea',\n",
+       " 'Canada',\n",
+       " 'Argentina',\n",
+       " 'Finland',\n",
+       " 'Italy',\n",
+       " 'Mexico',\n",
+       " 'USA',\n",
+       " 'Malta',\n",
+       " 'Morocco',\n",
+       " 'Croatia']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "unique_countries  # ['USA', 'Finland', 'Argentina', 'South Korea', 'Morocco',\n",
     "#'Croatia','Mexico','Malta','Italy','Canada']"
